ui and service changes

--- a/ocw/src/main/resources/application.properties
+++ b/ocw/src/main/resources/application.properties
@@ -1,3 +1,4 @@
 spring.data.mongodb.database=carwash
 spring.data.mongodb.host=localhost
 spring.data.mongodb.port=27017
+logging.file.name=C:\Users\Ramya\git\On-demandCarWash\ocw\src\main\resources\ocw.log
